syntax = "proto3";

package controlProto;


option go_package = "ControlCenter-Server/proto/controlProto";

service PushToServer {
  rpc PushTask (CommandItem) returns(CommandItem);
}

enum ServerCommand {
  CMD_ID_HELLO = 0;
  CMD_ID_HEARTBEAT = 1;
  CMD_ID_AUTH = 2;
  CMD_ID_UPDATE_SERVER_INFO = 3;
  CMD_ID_CLIENT_ACTION = 4;
}

message CommandItem {
  string        server_id = 1;
  bytes         server_token = 2;
  ServerCommand command = 3;
  bytes         command_buf = 4;
  string SeqID = 5;
}
